--- a/login.css
+++ b/login.css
@@ -7,7 +7,7 @@ body {
         margin: 0;
         padding: 20px;
 
-        background-image: url("img/foto.jpg");
+        background-image: url("img/fotoParque.jpg");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -34,9 +34,10 @@ body {
         .container {
             text-align: center;
             background-color: transparent;
-            padding-top: 350px;
+            padding-top: 100px;
             border-radius: 12px;
             box-shadow: 0 0 10px rgba(0,0,0,0,2);
+            margin: auto;
         }
         .container button {
             width: 80px;
